--- a/_posts/2025-01-30-Test.md
+++ b/_posts/2025-01-30-Test.md
@@ -9,6 +9,8 @@ tags: [CTF, Cybersecurity, Penetration Testing]
 
 Capture The Flag (CTF) competitions have become a cornerstone of cybersecurity training, pushing participants to think critically and creatively when attacking and defending systems. Among the various CTF formats, boot-to-root machines stand out as one of the most immersive and challenging experiences.
 
+![Desktop View](/assets/B2R.webp){: .right }{: w="375" h="190" }
+
 ### What is a Boot-to-Root Challenge?
 
 A boot-to-root challenge is a simulated environment where players start with limited access to a machine and must escalate their privileges to gain full control (root access). These challenges typically involve reconnaissance, vulnerability exploitation, privilege escalation, and forensic analysis.
