--- a/_posts/2025-01-30-Test.md
+++ b/_posts/2025-01-30-Test.md
@@ -2,6 +2,7 @@
 layout: post
 title: "Exploring the Art of Boot-to-Root CTF Challenges"
 date: 2025-01-30
+image: /assets/B2R.webp
 tags: [CTF, Cybersecurity, Penetration Testing]
 ---
 
