--- a/_posts/2025-01-30-B2R.md
+++ b/_posts/2025-01-30-B2R.md
@@ -3,6 +3,7 @@ layout: post
 title: "Exploring the Art of Boot-to-Root CTF Challenges"
 date: 2025-01-30
 image: /assets/B2R.webp
+category: "Boot2root"
 tags: [CTF, Cybersecurity, Penetration Testing]
 ---
 
