--- a/_posts/2025-01-30-B2R.md
+++ b/_posts/2025-01-30-B2R.md
@@ -5,6 +5,7 @@ date: 2025-01-30
 image: /assets/B2R.webp
 category: "Boot2root"
 tags: [CTF, Cybersecurity, Penetration Testing]
+active: false  # Set to true for active HTB machines, false for retired or non-HTB posts
 ---
 
 ## Exploring the Art of Boot-to-Root CTF Challenges
