--- a/_posts/2025-01-30-B2R.md
+++ b/_posts/2025-01-30-B2R.md
@@ -6,6 +6,7 @@ image: /assets/B2R.webp
 category: "Boot2root"
 tags: [CTF, Cybersecurity, Penetration Testing]
 active: true
+youtube_id: "your-youtube-video-id"
 ---
 
 ## Exploring the Art of Boot-to-Root CTF Challenges
