--- a/_posts/2025-01-30-B2R.md
+++ b/_posts/2025-01-30-B2R.md
@@ -5,7 +5,7 @@ date: 2025-01-30
 image: /assets/B2R.webp
 category: "Boot2root"
 tags: [CTF, Cybersecurity, Penetration Testing, htb, thm]
-active: true
+active: false
 youtube_id: ""
 ---
 
